--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
-  - 'stable'
-script: node_modules/karma/bin/karma start karma.conf.js --single-run
-before_script:
-    - npm install
+  - 'node'
+script:
+  - npm run build  # build
+  - npm run coverage  # run mocha unit tests with coverage
+after_script:
+  - 'cat coverage/lcov.info | ./node_modules/.bin/coveralls' # sends the coverage report to coveralls
