--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,53 +1,32 @@
 {
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "Debug Current JavaScript File",
-			"type": "node",
-			"request": "launch",
-            // File currently being viewed
-			"program": "${file}",
-			"stopOnEntry": true,
-			"args": [],
-			"cwd": "${workspaceRoot}"
-		},
-		{
-			"name": "Debug Current TypeScript File",
-			"type": "node",
-			"request": "launch",
-            // File currently being viewed
-			"program": "${file}",
-			"stopOnEntry": true,
-			"args": [],
-			"cwd": "${workspaceRoot}",
-			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/dist"
-		},
-		{
-			"name": "Debug TypeScript Tests",
-			"type": "node",
-			"request": "launch",
-			"program": "${workspaceRoot}/node_modules/jasmine-node/bin/jasmine-node",
-			"stopOnEntry": false,
-			"args": [
-                "dist",
-				"--verbose"
-            ],
-			"cwd": "${workspaceRoot}",
-			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/dist"
-		},
-		{
-			"name": "Debug Gulp Task",
-			"type": "node",
-			"request": "launch",
-			"program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
-			"stopOnEntry": false,
-			"args": [
-                // Replace 'default' with name of gulp task to run
-                "default"
-            ],
-			"cwd": "${workspaceRoot}"
-		}
-	]
+  // Use IntelliSense to learn about possible Node.js debug attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug file",
+      "program": "${workspaceRoot}/lib/${fileBasenameNoExtension}.js",
+      "cwd": "${workspaceRoot}",
+      "sourceMaps": true,
+      "smartStep": true,
+      "preLaunchTask": "build",
+      "outFiles": [
+        "${workspaceRoot}/lib/*.js"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug test",
+      "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
+      "args": [
+        "--findRelatedTests",
+        "${relativeFile}"
+      ],
+      "cwd": "${workspaceRoot}"
+    }
+  ]
 }
