--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "version" : "3.0.1",
   "compilerOptions": {
     "declaration": true,
     "module": "commonjs",
@@ -17,7 +18,7 @@
     ]
   },
   "include": [
-    "src/**/*", "test/throw-manager-spec.ts"
+    "src/**/*", "test/throw-manager-spec.ts", "test/coin-throw-spec.ts", "test/strike-manager-spec.ts"
   ],
   "exclude": [
     "node_modules",
