--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     ]
   },
   "include": [
-    "src/**/*", "test/throw-manager-spec.ts", "test/coin-throw-spec.ts", "test/strike-manager-spec.ts"
+    "src/**/*", "test/throw-manager-spec.ts", "test/coin-throw-manager-spec.ts", "test/strike-manager-spec.ts"
   ],
   "exclude": [
     "node_modules",
